contact form bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -635,103 +635,6 @@ canvas{
 
 /*-------About area css ends--------------*/
 
-/*-------- 7. Services area starts ----------*/
-
-
-.services-area {
-    background: #f8f8f8;
-}
-.service {
-    text-align: center;
-}
-
-.service-box {
-    padding: 20px;
-    margin-bottom: 40px;
-    position: relative;
-    transition: .9s;
-}
-
-.service-icon i {
-    font-size: 50px;
-    color: #00B0DC;
-    margin-bottom: 20px;
-}
-
-.service-box:hover:after {
-    top: 0;
-    height: 100%;
-    transition: 0.9s;
-}
-
-.service-box:hover .after {
-    bottom: 0;
-    height: 100%;
-    transition: 0.9s;
-}
-
-.service-box:hover:before {
-    left: 0;
-    width: 100%;
-    transition: 0.9s;
-}
-
-.service-box:hover .before {
-    right: 0;
-    width: 100%;
-    transition: 0.9s;
-}
-
-.service-box:hover:before,
-.service-box:hover .before {
-    width: 100%;
-    transition: 0.9s;
-}
-
-.service-box:after {
-    height: 80%;
-    width: 2px;
-    content: '';
-    top: 10%;
-    left: 0px;
-    transition: 0.9s;
-}
-
-.service-box .before,
-.service-box .after,
-.service-box:before,
-.service-box:after {
-    background: #777;
-    position: absolute;
-    transition: 0.9s;
-}
-
-.service-box:before {
-    height: 2px;
-    width: 80%;
-    content: '';
-    top: 0px;
-    left: 10%;
-    transition: 0.9s;
-}
-
-.service-box .before {
-    height: 2px;
-    width: 80%;
-    bottom: 0px;
-    right: 10%;
-    transition: 0.9s;
-}
-
-.service-box .after {
-    height: 80%;
-    width: 2px;
-    bottom: 10%;
-    right: 0px;
-    transition: 0.9s;
-}
-
-/*-------- Services area ends ----------*/
 
 /*--------- 8. Skills area starts --------------*/
 
@@ -1019,96 +922,6 @@ ul.port-nav-list li a.active {
 
 /*-------- Experience area ends -------------*/
 
-/*------- 12. Testimonial area css starts --------*/
-
-.testimonial-area .section-title h2 {
-    color: #fff;
-}
-
-.testimonial-area{
-    background-image: url(../images/testimonial/1.jpeg);
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    position: relative;
-    z-index: 1;
-}
-.testimonial-area:before{
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.7);
-    z-index: -1;
-}
-.single-testimonial {
-    background: #ffffff;
-    border-radius: 5px;
-    padding: 30px;
-}
-
-.single-testimonial p {
-    margin-bottom: 30px;
-}
-
-.single-testimonial h2 {
-    margin: 10px 0 0;
-    font-size: 18px;
-    text-transform: uppercase;
-}
-
-.testi-comment i {
-    font-size: 30px;
-    color: #00B0DC;
-}
-
-.single-testimonial h3 {
-    margin: 10px 0 0;
-    font-weight: 100;
-    font-size: 15px;
-}
-
-.testi-img {
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.testi-img img {
-    width: 100%;
-    height: 100%;
-}
-
-.owl-theme .owl-controls{
-    margin-top: 50px;
-    margin-left: 30px;
-}
-
-.owl-dots{
-    text-align: center;
-    margin-top: 30px;
-}
-
-.owl-dot {
-    display: inline-block;
-    height: 15px !important;
-    width: 15px !important;
-    background-color: #ffffff !important;
-    opacity: 0.8;
-    border-radius: 50%;
-    margin: 0 5px;
-}
-
-.owl-dot.active {
-    background-color: #00B0DC !important;
-}
-
-
-/*------- testimonial area ends --------*/
 
 /*-------------13. Contact area starts -------------*/
 
@@ -1165,6 +978,10 @@ ul.port-nav-list li a.active {
     letter-spacing: 2px;
     font-size: 11px;
     color: #777;
+}
+.alert-greet {
+    color: #3c763d;
+    padding: 15px;
 }
 /*------------- Contact area ends -------------*/
 
