background image added

--- a/css/style.css
+++ b/css/style.css
@@ -644,7 +644,7 @@ canvas{
 
 .skills-area{
     position: relative;
-    background-image: url(../images/skills/1.jpg);
+    background-image: url(../images/skills/1.jpeg);
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
